Minimal change of name

--- a/src/components/likeAndComments/LikeAndComments.stories.mdx
+++ b/src/components/likeAndComments/LikeAndComments.stories.mdx
@@ -14,10 +14,10 @@ LikeAndComments component.
 
 export const Template = (args) => <LikeAndComments label={args.label} showAny={args.showAny}/>;
 
-## Basic2
+## Basic
 <Canvas>
   <Story 
-    name="Basic2"
+    name="Basic"
     args={{
         label : 'Label likeAndComments'
     }}
@@ -26,6 +26,6 @@ export const Template = (args) => <LikeAndComments label={args.label} showAny={a
   </Story>
 </Canvas>
 
-<ArgsTable story="Basic2" />
+<ArgsTable story="Basic" />
 
 
