--- a/src/components/style/global.stories.mdx
+++ b/src/components/style/global.stories.mdx
@@ -4,11 +4,35 @@ import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs';
     title="Introduction/Style/Default global style"/>
 
 # Default global styles
-The `body` element is the container for all content on the webpage. The styles applied to it are:
-- Elements displayed centered and sorted vertically by default (using **display: flex**, **flex-direction: column** and **align-items: center**).
+The file **`app.scss`** contains a series of default pre-applied styles for the whole application (used on the tag **`body`**).
 
-- Margins and paddings set to 0 by default (Using **margin: 0** and **padding: 0**).
+### Elements displayed centered and sorted vertically by default
 
-- Font set to the default font set in vars.scss (**font-family: $default-font**).
+```
+display: flex;
+flex-direction: column;
+align-items: center;
+```
 
-- Width set to 100% of the screen width on mobiles (**width: 100vw**, **max-width: 100vw** and **box-sizing: border-box**, this last one to prevent overflowing when using padding).
+### Margins and paddings set to 0 by default.
+
+```
+margin: 0;
+padding: 0;
+```
+
+### Font set to the default in vars.scss
+
+```
+font-family: $default-font;
+```
+
+### Width set to 100% of the screen width on mobiles
+```
+@media (max-width: $mobile-breakpoint) {
+    width: 100vw;
+    max-width: 100vw;
+    box-sizing: border-box;
+}
+```
+(`box-sizing: border-box` is used to prevent overflowing when using `padding`).
