--- a/src/components/userDetails/USerDetails.stories.mdx
+++ b/src/components/userDetails/USerDetails.stories.mdx
@@ -1,29 +1,34 @@
 import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs';
 import { UserDetails } from './UserDetails';
 
-<Meta 
-    title="Components/Content/UserDetails" 
-    component={UserDetails}
-/>
+<Meta title="Components/Content/UserDetails" component={UserDetails} />
 
 # UserDetails
+
 UserDetails component.
 
 <Props of={UserDetails} />
 
 ## Basic
+
 <Canvas>
-  <Story 
+  <Story
     name="Basic"
     args={{
-        user : '{username:hector; description: hola es una descripción}'
+      user: {
+        username: '',
+        description: '',
+        score: 0,
+        profileColor: '',
+        img: '',
+      },
     }}
-   >
-        {Template.bind({})}
+  >
+    {Template.bind({})}
   </Story>
 </Canvas>
 
 <ArgsTable story="Basic" />
 
-export const Template = (args) => <UserDetails user/>;
+export const Template = (args) => <UserDetails user={args.user} />;
 
