#4 UserSummary Documentation quick fix

--- a/src/components/userSummary/UserSummary.stories.mdx
+++ b/src/components/userSummary/UserSummary.stories.mdx
@@ -57,3 +57,5 @@ export const Template3 = (args) => (
 </Canvas>
 
 <ArgsTable story="Basic" />
+<ArgsTable story="ContactsNumbers" />
+<ArgsTable story="Tasks" />
