--- a/src/components/searchBar/SearchBar.stories.mdx
+++ b/src/components/searchBar/SearchBar.stories.mdx
@@ -1,27 +1,28 @@
 import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs';
-import {SearchBar} from './SearchBar';
+import { SearchBar } from './SearchBar';
 
-<Meta 
-    title="Components/Content/SearchBar" 
-    component={SearchBar}
-/>
+<Meta title="Components/Content/SearchBar" component={SearchBar} />
 
 # SearchBar
+
 A search bar.
 
-<Props of={SearchBar}/>
+<Props of={SearchBar} />
 
 export const Template = (args) => <SearchBar onSearch={args.onSearch} />;
 
 ## Basic
+
 <Canvas>
-  <Story 
+  <Story
     name="Basic"
     args={{
-        onSearch : 'Search'
+      onSearch: (searchTerm) => {
+        console.log(searchTerm);
+      },
     }}
-   >
-        {Template.bind({})}
+  >
+    {Template.bind({})}
   </Story>
 </Canvas>
 
