--- a/src/components/userSummary/UserSummary.stories.mdx
+++ b/src/components/userSummary/UserSummary.stories.mdx
@@ -5,24 +5,18 @@ import { UserSummary } from './UserSummary';
 
 # UserSummary
 
-UserSummary placed in the user profile. It contains - The user's profile picture - User's username - User's current missions/tasks - User's level - User's contacts - User's total score/points
+UserSummary placed in the user's profile page. It contains information relative to the user's missions, total points, contacts...
 
 <Props of={UserSummary} />
 
 export const Template = (args) => (
-  <LevelProps
-    userName={args.userName}
+  <UserSummaryProps
+    username={args.username}
     totalPoints={args.totalPoints}
     level={args.level}
+    contactsNumber={args.contactsNumber}
+    currentTasks={args.currentTasks}
   />
-);
-
-export const Template2 = (args) => (
-  <ContactsNumberProps contactsNumber={args.contactsNumber} />
-);
-
-export const Template3 = (args) => (
-  <CurrentTasksProps currentTasks={args.currentTasks} />
 );
 
 ## Basic
@@ -31,31 +25,15 @@ export const Template3 = (args) => (
   <Story
     name="Basic"
     args={{
-      userName: 'UserName',
+      username: 'Users Name',
       totalPoints: 'Users total points',
       level: 'Users current level',
+      contactsNumber: 'Users total contacts',
+      currentTasks: 'Users tasks/missions in progress',
     }}
   >
     {Template.bind({})}
   </Story>
-  <Story
-    name="ContactsNumbers"
-    args={{
-      contactsNumber: 'Users total contacts',
-    }}
-  >
-    {Template2.bind({})}
-  </Story>
-  <Story
-    name="Tasks"
-    args={{
-      currentTasks: 'Users tasks/missions in progress',
-    }}
-  >
-    {Template3.bind({})}
-  </Story>
 </Canvas>
 
 <ArgsTable story="Basic" />
-<ArgsTable story="ContactsNumbers" />
-<ArgsTable story="Tasks" />
