--- a/src/components/userPhoto/UserPhoto.stories.mdx
+++ b/src/components/userPhoto/UserPhoto.stories.mdx
@@ -1,16 +1,16 @@
 import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs';
-import { UserImage } from './UserPhoto';
+import { UserPhoto } from './UserPhoto';
 
-<Meta title="Components/Content/UserPhoto" component={UserImage} />
+<Meta title="Components/Content/UserPhoto" component={UserPhoto} />
 
 # UserImage
 
 UserImage component.
 
-<Props of={UserImage} />
+<Props of={UserPhoto} />
 
 export const Template = (args) => (
-  <UserImage imageSrc={args.imageSrc} borderColor={args.borderColor} />
+  <UserPhoto imageSrc={args.imageSrc} borderColor={args.borderColor} />
 );
 
 ## Basic
