Unused showAny deleted

--- a/src/components/likeAndComments/LikeAndComments.stories.mdx
+++ b/src/components/likeAndComments/LikeAndComments.stories.mdx
@@ -8,7 +8,7 @@ import { LikeAndComments } from './LikeAndComments';
 LikeAndComments component.
 
 export const Template = (args) => (
-  <LikeAndComments label={args.label} showAny={args.showAny} />
+  <LikeAndComments label={args.label} />
 );
 
 ## Basic
