changes in th stories.mdx

--- a/src/components/header/Header.stories.mdx
+++ b/src/components/header/Header.stories.mdx
@@ -8,6 +8,11 @@ import { Header } from './Header';
 
 export const Template = (args) => <Header label={args.label}/>;
 
+<Props of={Header} />
+
+# Header
+This component is the header that is common to all web screens. At the moment it does not have functionalities, it is only visual. He doesn't miss any prop either
+
 <Canvas>
   <Story 
     name="Basic"
@@ -16,11 +21,10 @@ export const Template = (args) => <Header label={args.label}/>;
   </Story>
 </Canvas>
 
-...........................................................................................................................................................
 
 
-# Header
-This component is the header that is common to all web screens. At the moment it does not have functionalities, it is only visual
+
+
 
 
 
