--- a/src/components/searchBar/SearchBar.stories.mdx
+++ b/src/components/searchBar/SearchBar.stories.mdx
@@ -16,10 +16,8 @@ export const Template = (args) => <SearchBar onSearch={args.onSearch} />;
 <Canvas>
   <Story
     name="Basic"
-    args={{
-      onSearch: (searchTerm) => {
-        console.log(searchTerm);
-      },
+    actions={{
+      onSearch: 'onSearch',
     }}
   >
     {Template.bind({})}
