more commets added

--- a/src/components/userPhoto/UserPhoto.stories.mdx
+++ b/src/components/userPhoto/UserPhoto.stories.mdx
@@ -5,7 +5,7 @@ import { UserPhoto } from './UserPhoto';
 
 # UserImage
 
-UserImage component.
+UserImage component to render in the project a photo with variable colour borders and in round format. 
 
 <Props of={UserPhoto} />
 
