--- a/src/components/userDetails/UserDetails.stories.mdx
+++ b/src/components/userDetails/UserDetails.stories.mdx
@@ -5,7 +5,7 @@ import { UserDetails } from './UserDetails';
 
 # UserDetails
 
-UserDetails component should shows the username from the user, the profile picture, a short description
+UserDetails component shows the username from the user, the profile picture, a short description
 and the average score from all projects.
 
 <Props of={UserDetails} />
