Added new documentation

--- a/src/components/searchBar/SearchBar.stories.mdx
+++ b/src/components/searchBar/SearchBar.stories.mdx
@@ -6,6 +6,7 @@ import { SearchBar } from './SearchBar';
 # SearchBar
 
 A search bar.
+For the results to show, it is neccessary to click outside of the bar, since the function is executed through the onBlur event.
 
 <Props of={SearchBar} />
 
