Added "control" range to the "completed" prop to limit values between 0 - 100

--- a/src/components/profileProgressBar/ProfileProgressBar.stories.mdx
+++ b/src/components/profileProgressBar/ProfileProgressBar.stories.mdx
@@ -22,12 +22,12 @@ export const Template = (args) => <ProfileProgressBar completed={args.completed}
         completed : 'Percentage completed'
         
     }}
+    controls={{
+        completed: { type: 'range', min: 0, max: 100 }
+    }}
    >
         {Template.bind({})}
   </Story>
 </Canvas>
 
 <ArgsTable story="Basic" />
-
-
-
