Change datatype, from mouseeventhandler to () => void

--- a/src/components/addIcon/AddIcon.stories.mdx
+++ b/src/components/addIcon/AddIcon.stories.mdx
@@ -4,11 +4,12 @@ import { AddIcon } from './AddIcon';
 
 <Meta
     title="Components/Content/AddIcon"
+    argTypes={{ onClick: { action: 'clicked' } }}
     component={AddIcon}
 />
 
 # AddIcon
-Badge component.
+AddIcon component. If you click you execute a function
 
 <Props of={AddIcon} />
 
