--- a/src/components/header/Header.stories.mdx
+++ b/src/components/header/Header.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs';
 import { Header } from './Header';
 
 <Meta 
-    title="Components/Menus/Header" 
+    title="Components/Content/Header" 
     component={Header}
 />
 
@@ -12,14 +12,15 @@ This component is the header that is common to all web screens. At the moment it
 <Props of={Header} />
 
 
-export const Template = (args) => <Header count={args.count}/>;
+export const Template = (args) => <Header count={args.count} title={args.title}/>;
 
 ## Basic
 <Canvas>
   <Story 
     name="Basic"
     args={{
-        count : 0
+        count : 7 ,
+        title : "Productivio"
     }}
    >
         {Template.bind({})}
