--- a/src/components/timeRemaining/timeRemaining.stories.mdx
+++ b/src/components/timeRemaining/timeRemaining.stories.mdx
@@ -1,18 +1,30 @@
+import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs';
 import { TimeRemaining } from './TimeRemaining';
 
 <Meta title="Components/Content/TimeRemaining" component={TimeRemaining} />
 
+# TimeRemaining
+
+TimeRemaining component.
+
+export const Template = (args) => (
+  <TimeRemaining percentage={args.percentage} text={args.text} />
+);
+
+## Basic
+
 <Canvas>
-  <Story 
-    name="Basic example"
+  <Story
+    name="Default"
+    argTypes={{
+      dueTime: { control: { type: 'date' } }
+    }}
     args={{
       dueTime: null,
     }}
-   >
-    {(args) => <TimeRemaining {...args} />}
+  >
+    {Template.bind({})}
   </Story>
 </Canvas>
 
-<ArgsTable of={TimeRemaining} story="Basic example" />
-
-<TimeRemaining></TimeRemaining>
+<ArgsTable story="Default" />
