--- a/src/components/likes/Likes.stories.mdx
+++ b/src/components/likes/Likes.stories.mdx
@@ -1,14 +1,14 @@
 import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs';
-import { LikeAndComments } from './LikeAndComments';
+import { Likes } from './Likes';
 
-<Meta title="Components/Content/LikeAndComments" component={LikeAndComments} />
+<Meta title="Components/Content/Likes" component={Likes} />
 
-# LikeAndComments
+# Likes
 
-LikeAndComments component.
+Likes component.
 
 export const Template = (args) => (
-  <LikeAndComments />
+  <Likes />
 );
 
 ## Basic
