border and box shadow added

--- a/src/components/inputWithLabel/InputWithLabel.stories.mdx
+++ b/src/components/inputWithLabel/InputWithLabel.stories.mdx
@@ -10,7 +10,7 @@ InputWithLabel component.
 <Props of={InputWithLabel} />
 
 export const Template = (args) => (
-  <InputWithLabel label={args.label} height={args.height} width={args.width} name={args.name} textColor={args.textColor} fontSize={args.fontSize} placeHolder={args.placeHolder} />
+  <InputWithLabel label={args.label} height={args.height} width={args.width} name={args.name} textColor={args.textColor} borderColor={args.borderColor} fontSize={args.fontSize} placeHolder={args.placeHolder} />
 );
 
 ## Basic
