mdx modified and center style in scss

--- a/src/components/taskProgressBar/TaskProgressBar.stories.mdx
+++ b/src/components/taskProgressBar/TaskProgressBar.stories.mdx
@@ -25,8 +25,8 @@ export const Template = (args) => (
    
     args={{
         percentage : 0,
-        childBackgroundColor :" red",
-        parentBackgroundColor : "blue"
+        childBackgroundColor :'red',
+        parentBackgroundColor : 'blue'
         
     }}
      
