New info added to documentation

--- a/src/components/topOne/TopOne.stories.mdx
+++ b/src/components/topOne/TopOne.stories.mdx
@@ -5,7 +5,7 @@ import { TopOne } from './TopOne';
 
 # TopOne
 
-This component will show the pofile picture, username and points of the top one user.
+This component will show the profile picture, username and points of the top one user of the week. The level of each user will determine the color bordering their profile picture.
 
 <Props of={TopOne} />
 
