#78 UserInfo structure working

--- a/src/components/userInfo/UserInfo.stories.mdx
+++ b/src/components/userInfo/UserInfo.stories.mdx
@@ -9,18 +9,7 @@ TODO
 
 <Props of={UserInfo} />
 
-export const Template = (args) => (
-  <UserInfo
-    username={args.username}
-    userImg={args.userImg}
-    userColor={args.userColor}
-    description={args.description}
-    totalPoints={args.totalPoints}
-    level={args.level}
-    contactsNumber={args.contactsNumber}
-    currentTasks={args.currentTasks}
-  />
-);
+export const Template = (args) => <UserInfo user={args.user} />;
 
 ## Basic
 
