--- a/src/components/userInfo/UserInfo.stories.mdx
+++ b/src/components/userInfo/UserInfo.stories.mdx
@@ -27,6 +27,7 @@ export const Template = (args) => <UserInfo user={args.user} />;
         level: 'Users current level',
         contactsNumber: 'Users total contacts',
         currentTasks: 'Users tasks/missions in progress',
+        showBackground: 'false',
       },
     }}
   >
